branch needs sparta master

--- a/.github/workflows/ubuntu-build.yml
+++ b/.github/workflows/ubuntu-build.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           repository: sparcians/map
           path: map
+          ref: master
 
 
       # Setup Conda and build environment
