added sparta dep to core common test

--- a/test/core/common/CMakeLists.txt
+++ b/test/core/common/CMakeLists.txt
@@ -5,3 +5,4 @@ add_library(common_test
   SourceUnit.cpp
   )
 target_include_directories(common_test SYSTEM PRIVATE ${Boost_INCLUDE_DIRS})
+target_link_libraries(common_test SPARTA::sparta)
