--- a/arches/medium_core.yaml
+++ b/arches/medium_core.yaml
@@ -25,19 +25,23 @@ top.cpu.core0.rename.scoreboards:
   # |
   # V
   integer.params.latency_matrix: |
-    [["",     "alu0", "alu1", "alu2", "fpu0", "fpu1", "br0"],   # <-- TO
-     ["alu0",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["alu1",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["alu2",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["fpu0",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["fpu1",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["br0",     "1",    "1",    "1",    "1",    "1",   "1"]]
+    [["",     "alu0", "alu1", "alu2", "fpu0", "fpu1", "br0", "lsu"], 
+    ["alu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
+    ["alu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
+    ["alu2",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
+    ["fpu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
+    ["fpu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
+    ["br0",     "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
+    ["lsu",     "1",    "1",    "1",    "1",    "1",   "1",  "1"]]
+
 
   float.params.latency_matrix: |
-    [["",     "alu0", "alu1", "alu2", "fpu0", "fpu1", "br0"],   # <-- TO
-     ["alu0",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["alu1",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["alu2",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["fpu0",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["fpu1",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["br0",     "1",    "1",    "1",    "1",    "1",   "1"]]
+    [["",     "alu0", "alu1", "alu2", "fpu0", "fpu1", "br0", "lsu"], 
+    ["alu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
+    ["alu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
+    ["alu2",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
+    ["fpu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
+    ["fpu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
+    ["br0",     "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
+    ["lsu",     "1",    "1",    "1",    "1",    "1",   "1",  "1"]]
+
