--- a/arches/small_core.yaml
+++ b/arches/small_core.yaml
@@ -22,13 +22,15 @@ top.cpu.core0.rename.scoreboards:
   # |
   # V
   integer.params.latency_matrix: |
-    [["",     "alu0", "fpu0", "br0"],   # <-- TO
-     ["alu0",    "1",    "1",   "1"],
-     ["fpu0",    "1",    "1",   "1"],
-     ["br0",     "1",    "1",   "1"]]
+    [["",     "alu0", "fpu0", "br0", "lsu"],   # <-- TO
+     ["alu0",    "1",    "1",   "1",   "1"],
+     ["fpu0",    "1",    "1",   "1",   "1"],
+     ["br0",     "1",    "1",   "1",   "1"],
+     ["lsu",     "1",    "1",   "1",   "1"]]
 
   float.params.latency_matrix: |
-    [["",     "alu0", "fpu0", "br0"],
-     ["alu0",    "1",    "1",   "1"],
-     ["fpu0",    "1",    "1",   "1"],
-     ["br0",     "1",    "1",   "1"]]
+    [["",     "alu0", "fpu0", "br0", "lsu"],   # <-- TO
+     ["alu0",    "1",    "1",   "1",   "1"],
+     ["fpu0",    "1",    "1",   "1",   "1"],
+     ["br0",     "1",    "1",   "1",   "1"],
+     ["lsu",     "1",    "1",   "1",   "1"]]
