I think these changes will work in Peter's environment

--- a/.github/workflows/ubuntu-build.yml
+++ b/.github/workflows/ubuntu-build.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           repository: sparcians/map
           path: map
-          ref: master
+          ref: map_v2.0.0
 
       # Setup Conda and build environment
       - name: Grab Python v3.8
