--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -19,4 +19,6 @@ add_library(core
   CPU.cpp
   CPUFactory.cpp
   CPUTopology.cpp
-  )
+)
+get_property(SPARTA_INCLUDE_PROP TARGET SPARTA::sparta PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
+target_include_directories(core SYSTEM PRIVATE ${SPARTA_INCLUDE_PROP})
