Update boost deps for core and mss, track Sparta PR397 (#42)
This fixes #35 and tracks the changes in Sparta
[PR397(https://github.com/sparcians/map/pull/397), which are merges into Sparta main already. 

---------

Signed-off-by: Peter Debacker <peter-d@users.noreply.github.com>
Signed-off-by: Knute Lingaard <knute.lingaard@sifive.com>
Co-authored-by: Peter Debacker <pdback@imec.be>
Co-authored-by: Knute Lingaard <Knute.Lingaard@sifive.com>
Co-authored-by: Knute Lingaard <klingaard@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.19)
 set (CMAKE_CXX_STANDARD 17)
 set (CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -11,16 +11,38 @@ add_compile_options ( -Werror
 
 ################################################################################
 # Set up Sparta
-if (NOT SPARTA_BASE)
-  message (FATAL_ERROR "Need to define the location of the Sparta: cmake <args> -DSPARTA_BASE=\"/path/to/sparta\"")
-endif ()
-include (${SPARTA_BASE}/cmake/sparta-config.cmake)
+if(IS_DIRECTORY ${SPARTA_SEARCH_DIR})
+  message (STATUS "Using '${SPARTA_SEARCH_DIR}' for sparta install")
+elseif(DEFINED ENV{CONDA_PREFIX})
+  message (STATUS "Looking for SPARTA in the conda environment: '$ENV{CONDA_PREFIX}'")
+  set(SPARTA_SEARCH_DIR $ENV{CONDA_PREFIX})
+else()
+  message (STATUS "If needed, please provide the location where sparta is installed: -DSPARTA_SEARCH_DIR=<directory>")
+endif()
+set(CMAKE_MODULE_PATH "${SPARTA_SEARCH_DIR}/lib/cmake/sparta" ${CMAKE_MODULE_PATH})
+
+find_package(Sparta REQUIRED)
+
+if (NOT SPARTA_FOUND)
+  message (FATAL_ERROR "Sparta was not found in ${SPARTA_SEARCH_DIR}")
+else()
+  message (STATUS "Sparta was found in ${SPARTA_SEARCH_DIR}")
+endif()
+
+include_directories(${SPARTA_INCLUDE_DIRS})
 
 ################################################################################
 # Set up STF library
 set (STF_LIB_BASE ${PROJECT_SOURCE_DIR}/stf_lib)
 set (DISABLE_STF_DOXYGEN ON)
-#include(${STF_LIB_BASE}/cmake/stf-config.cmake)
+
+if (CMAKE_BUILD_TYPE MATCHES "^[Rr]elease")
+  set (FULL_LTO true)
+  include(${STF_LIB_BASE}/cmake/stf_linker_setup.cmake)
+  setup_stf_linker(false)
+endif()
+
+
 
 # Use ccache if installed
 find_program (CCACHE_PROGRAM ccache)
@@ -45,12 +67,6 @@ else()
   message (FATAL_ERROR "Please provide a CMAKE_BUILD_TYPE: -DCMAKE_BUILD_TYPE=Release|Debug|Profile")
 endif()
 
-# Sparta/STF linking
-link_directories (
-  ${SPARTA_BASE}/${SPARTA_BUILD_TYPE}
-  ${SPARTA_BASE}/${SPARTA_BUILD_TYPE}/simdb
-  )
-
 # Profile build flags
 set(CMAKE_CXX_FLAGS_PROFILE   "-O3 -pg -g -ftime-trace")
 set(CMAKE_CXX_FLAGS_FASTDEBUG "-O3 -g")
@@ -59,8 +75,6 @@ set(CMAKE_CXX_FLAGS_FASTDEBUG "-O3 -g")
 include_directories (core mss)
 include_directories (SYSTEM mavis)
 include_directories (SYSTEM stf_lib)
-include_directories (SYSTEM ${SPARTA_BASE})
-include_directories (SYSTEM ${SPARTA_BASE}/simdb/include)
 
 # The Core, MSS, and the simulator
 add_subdirectory(core)
@@ -77,10 +91,12 @@ add_executable(olympia
   sim/OlympiaSim.cpp
   sim/main.cpp
   )
-target_link_libraries (olympia core mss ${Sparta_LIBS} ${STF_LINK_LIBS})
+target_link_libraries (olympia core mss SPARTA::sparta ${STF_LINK_LIBS})
 if (CMAKE_BUILD_TYPE MATCHES "^[Rr]elease")
-  target_link_options    (olympia PUBLIC -flto)
+  target_compile_options (core    PUBLIC -flto)
+  target_compile_options (mss     PUBLIC -flto)
   target_compile_options (olympia PUBLIC -flto)
+  target_link_options    (olympia PUBLIC -flto)
 endif()
 
 # Create a few links like reports and arch directories
