--- a/mss/CMakeLists.txt
+++ b/mss/CMakeLists.txt
@@ -3,3 +3,5 @@ add_library(mss
   BIU.cpp
   MSS.cpp
   )
+get_property(SPARTA_INCLUDE_PROP TARGET SPARTA::sparta PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
+target_include_directories(mss SYSTEM PRIVATE ${SPARTA_INCLUDE_PROP})
