Updating CMake for rename test

--- a/test/core/rename/CMakeLists.txt
+++ b/test/core/rename/CMakeLists.txt
@@ -1,9 +1,7 @@
 project(Rename_test)
 
 add_executable(Rename_test Rename_test.cpp)
-target_link_libraries(Rename_test core common_test ${STF_LINK_LIBS} ${Sparta_LIBS})
-
-include(${SPARTA_BASE}/test/TestingMacros.cmake)
+target_link_libraries(Rename_test core common_test ${STF_LINK_LIBS} SPARTA::sparta)
 
 file(CREATE_LINK ${SIM_BASE}/mavis/json ${CMAKE_CURRENT_BINARY_DIR}/mavis_isa_files SYMBOLIC)
 file(CREATE_LINK ${SIM_BASE}/arches     ${CMAKE_CURRENT_BINARY_DIR}/arches          SYMBOLIC)
