--- a/test/core/rename/CMakeLists.txt
+++ b/test/core/rename/CMakeLists.txt
@@ -1,6 +1,9 @@
 project(Rename_test)
 
-add_executable(Rename_test Rename_test.cpp)
+target_link_libraries (core mss)
+
+add_executable(Rename_test Rename_test.cpp sim/OlympiaSim.cpp)
+
 target_link_libraries(Rename_test core common_test ${STF_LINK_LIBS} SPARTA::sparta)
 
 file(CREATE_LINK ${SIM_BASE}/mavis/json ${CMAKE_CURRENT_BINARY_DIR}/mavis_isa_files SYMBOLIC)
@@ -8,9 +11,13 @@ file(CREATE_LINK ${SIM_BASE}/arches     ${CMAKE_CURRENT_BINARY_DIR}/arches      
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/test_cores   ${CMAKE_CURRENT_BINARY_DIR}/test_cores SYMBOLIC)
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/expected_output  ${CMAKE_CURRENT_BINARY_DIR}/expected_output SYMBOLIC)
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/rename_multiple_instructions.json  ${CMAKE_CURRENT_BINARY_DIR}/rename_multiple_instructions.json SYMBOLIC)
+file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/raw_integer.json  ${CMAKE_CURRENT_BINARY_DIR}/raw_integer.json SYMBOLIC)
+file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/raw_lsu.json  ${CMAKE_CURRENT_BINARY_DIR}/raw_lsu.json SYMBOLIC)
 
 # Single add per cycle
 sparta_named_test(Rename_test_Run_Small  Rename_test small_core.out -c test_cores/test_small_core.yaml --input-file rename_multiple_instructions.json)
 sparta_named_test(Rename_test_Run_Medium Rename_test medium_core.out -c test_cores/test_medium_core.yaml --input-file rename_multiple_instructions.json)
 sparta_named_test(Rename_test_Run_Big    Rename_test big_core.out -c test_cores/test_big_core.yaml --input-file rename_multiple_instructions.json)
 sparta_named_test(Rename_test_Run_Big_Small_Rename    Rename_test big_core_small_rename.out -c test_cores/test_big_core_small_rename.yaml --input-file rename_multiple_instructions.json)
+sparta_named_test(Rename_test_Run_Small_lsu_dependency  Rename_test small_core.out -c test_cores/test_small_core_full.yaml --input-file raw_lsu.json)
+sparta_named_test(Rename_test_Run_Small_int_dependency  Rename_test small_core.out -c test_cores/test_medium_core_full.yaml --input-file raw_integer.json)
