Fixed another issue related to i2f; added pipe support/debug messages (#63)
Couple more things:
- Improved the performance of the simulator by reducing retire events
- Added param support to enable/disable skipping of non-user mode
instructions in an STF
- Added more debug messages
- Added Rename stall conditions/counters
- Fixed instruction status; was not being updated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,12 +64,13 @@ elseif (CMAKE_BUILD_TYPE MATCHES "^[Dd]ebug")
 elseif (CMAKE_BUILD_TYPE MATCHES "^[Pp]rofile")
   set(SPARTA_BUILD_TYPE "release")
 else()
-  message (FATAL_ERROR "Please provide a CMAKE_BUILD_TYPE: -DCMAKE_BUILD_TYPE=Release|Debug|Profile")
+  message (FATAL_ERROR "Please provide a CMAKE_BUILD_TYPE: -DCMAKE_BUILD_TYPE=Release|FastDebug|Debug|Profile")
 endif()
 
 # Profile build flags
 set(CMAKE_CXX_FLAGS_PROFILE   "-O3 -pg -g -ftime-trace")
 set(CMAKE_CXX_FLAGS_FASTDEBUG "-O3 -g")
+set(CMAKE_CXX_FLAGS_DEBUG     "-O0 -g")
 
 # Include directories
 include_directories (core mss)
