Add coremark to regression

--- a/test/sim/CMakeLists.txt
+++ b/test/sim/CMakeLists.txt
@@ -41,6 +41,13 @@ sparta_named_test(olympia_dhry_test_report_html olympia -i 1M
   --report reports/core_report.def
   --workload traces/dhry_riscv.zstf)
 
+# This command will run the coremark trace (1 million instructions)
+sparta_named_test(olympia_coremark_test_report_html olympia -i 1M
+  --report-yaml-replacements OUT_BASE coremark_test_report OUT_FORMAT text INST_START 0
+  --report-search-dir reports
+  --report reports/core_report.def
+  --workload traces/core_riscv.zstf)
+
 sparta_named_test(olympia_json_test_missing_opcodes olympia
   --workload json_tests/missing_opcodes.json)
 
