--- a/test/core/rename/test_cores/test_small_core_full.yaml
+++ b/test/core/rename/test_cores/test_small_core_full.yaml
@@ -9,7 +9,7 @@ top.cpu.core0:
   dispatch.params.num_to_dispatch: 2
   rob.params.num_to_retire:    2
   dcache.params:
-    dl1_size_kb: 16
+    l1_size_kb: 16
 
 top.cpu.core0.extension.core_extensions:
   execution_topology:
