Seperate the MMU and CACHE from the LSU (#86)
I kept the logic the same as it was earlier.
One of the design considerations was to use the BIU to communicate with
the cache and MMU.However it was later decided to keep the communication
simple until we design a more robust MMU design.

Same as #77 but the branch is in this repo instead of the fork

---------

Co-authored-by: vineethkm <vineethkm.01@gmail.com>
Co-authored-by: Knute Lingaard <Knute.Lingaard@sifive.com>

--- a/arches/big_core.yaml
+++ b/arches/big_core.yaml
@@ -13,8 +13,8 @@ top.cpu.core0:
   rename.params.num_float_renames: 64
   dispatch.params.num_to_dispatch: 8
   rob.params.num_to_retire:    8
-  lsu.params:
-    dl1_size_kb: 64
+  dcache.params:
+    l1_size_kb: 64
 
 top.cpu.core0.extension.core_extensions:
   execution_topology:
