Remove instruction limit from test cases

--- a/test/sim/CMakeLists.txt
+++ b/test/sim/CMakeLists.txt
@@ -35,14 +35,14 @@ sparta_named_test(olympia_json_test_report_html olympia
   --workload traces/example_json.json)
 
 # This command will run the dhrystone trace (1 million instructions)
-sparta_named_test(olympia_dhry_test_report_html olympia -i 1M
+sparta_named_test(olympia_dhry_test_report_html olympia
   --report-yaml-replacements OUT_BASE dhry_test_report OUT_FORMAT text INST_START 0
   --report-search-dir reports
   --report reports/core_report.def
   --workload traces/dhry_riscv.zstf)
 
 # This command will run the coremark trace (1 million instructions)
-sparta_named_test(olympia_coremark_test_report_html olympia -i 1M
+sparta_named_test(olympia_coremark_test_report_html olympia
   --report-yaml-replacements OUT_BASE coremark_test_report OUT_FORMAT text INST_START 0
   --report-search-dir reports
   --report reports/core_report.def
@@ -57,6 +57,6 @@ foreach(ARCH_FULL_PATH ${TEST_YAML})
   get_filename_component(ARCH_FILE_NAME ${ARCH_FULL_PATH} NAME)
   string(REGEX REPLACE ".yaml" "" ARCH_NAME ${ARCH_FILE_NAME})
   sparta_named_test(olympia_arch_${ARCH_NAME}_test olympia
-    -i500K --workload traces/dhry_riscv.zstf
+    --workload traces/dhry_riscv.zstf
     --arch ${ARCH_NAME})
 endforeach()
