--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,3 +29,4 @@ add_subdirectory(sim)
 add_subdirectory(core/common)
 add_subdirectory(core/dispatch)
 add_subdirectory(core/rename)
+add_subdirectory(core/lsu)
