--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,14 +97,23 @@ if(NOT CLANGFORMAT_EXECUTABLE)
   set(CLANGFORMAT_EXECUTABLE clang-format)
 endif()
 
-#
 # CPUTopology is pretty clean as it is.  There's an option to NOT
 # collapse the array of structures in clang-format v16, but we're not
 # there yet
-add_custom_target(olympia_clangformat
-  find core mss -name "*.[hc]pp" | grep -v CPUTopology.cpp > clang-format-files.out
+add_custom_target(clangformat
+  find core mss -name "*.[hc]pp" | grep -v CPUTopology > clang-format-files.out
   COMMAND
      ${CLANGFORMAT_EXECUTABLE} -i --files=clang-format-files.out
+  WORKING_DIRECTORY
+     ${CMAKE_SOURCE_DIR}
+  COMMENT
+     "Formatting ${prefix} with ${CLANGFORMAT_EXECUTABLE} ..."
+  )
+
+add_custom_target(clangformat-check
+  find core mss -name "*.[hc]pp" | grep -v CPUTopology > clang-format-files.out
+  COMMAND
+     ${CLANGFORMAT_EXECUTABLE} --Werror -n --files=clang-format-files.out
   WORKING_DIRECTORY
      ${CMAKE_SOURCE_DIR}
   COMMENT
