--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,4 +30,5 @@ include_directories(${PROJECT_SOURCE_DIR}/..)
 add_subdirectory(sim)
 add_subdirectory(core/common)
 add_subdirectory(core/dispatch)
+add_subdirectory(core/l2cache)
 add_subdirectory(core/rename)
