Unit : L2Cache - ack protocol change to credits, interface type change from bool to uint32_t + PR comment fixes. make regress clean.

--- a/test/core/l2cache/test_arches/2_src_L2Cache.yaml
+++ b/test/core/l2cache/test_arches/2_src_L2Cache.yaml
@@ -20,8 +20,9 @@ top:
       l2_size_kb : 512
       l2_associativity : 16
       l2_always_hit : false
-      l2cache_biu_credit_available : true      
       l2cache_latency : 10
+      is_icache_connected : true
+      is_dcache_connected : true
   biu:
     params:
       sink_latency: 10
