Fixed a couple of things:
1. Issue 126: bad character in ALF file generated from missing raw string
   identifier for python: r"\1"
2. Added dependency in Makefile on the gen_alf.py script
3. Added error message when the MAP ALF generator cannot be found

--- a/layouts/Makefile
+++ b/layouts/Makefile
@@ -1,7 +1,7 @@
 
 all: small_core.alf medium_core.alf big_core.alf
 
-%_core.alf:
+%_core.alf: ./gen_alf.py
 	@echo "Generating pipeout for $@"
 	@(cd ../release; ./olympia -z ../layouts/pipeout -i1 traces/dhry_riscv.zstf > /dev/null)
 	@./gen_alf.py -d pipeoutlocation.dat -a $*_core.alf
