Updated conda packages

--- a/conda/environment.yml
+++ b/conda/environment.yml
@@ -13,8 +13,6 @@ dependencies:
   - ca-certificates>=2022.12.7=ha878542_0
   - clang=13.0.1=ha770c72_0
   - clang-13=13.0.1=default_hc23dcda_0
-  - clang-format=14.0.6=default_hc6dbbc7_1
-  - clang-format-14=14.0.6=default_hc6dbbc7_1
   - clangxx=13.0.1=default_ha53f305_0
   - cmake>=3.19.7
   - cppcheck>=2.7.5=py310h94ea96f_1
@@ -46,6 +44,8 @@ dependencies:
   - libiconv>=1.17=h166bdaf_0
   - liblapack>=3.9.0=16_linux64_openblas
   - libllvm13=13.0.1=hf817b99_2
+  - libllvm14=14.0.6=hdb19cb5_3
+  - libllvm16=16.0.1=hadd5161_0
   - libnghttp2>=1.51.0=hdcd2b5c_0
   - libnsl>=2.0.0=h7f98852_0
   - libopenblas>=0.3.21=pthreads_h78a6416_3
