--- a/.github/workflows/ubuntu-build.yml
+++ b/.github/workflows/ubuntu-build.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         BUILD_TYPE: [Debug,Release]
-        COMPILER: [gcc, clang]
+        COMPILER: [gcc]
 
     name: Ubuntu-${{ matrix.BUILD_TYPE }}
     runs-on: ${{ matrix.os }}
