--- a/conda/environment.yml
+++ b/conda/environment.yml
@@ -10,12 +10,16 @@ dependencies:
   - boost-cpp>=1.76.0=h312852a_1
   - bzip2>=1.0.8=h7f98852_4
   - c-ares>=1.18.1=h7f98852_0
-  - ca-certificates>=2022.12.7=ha878542_0
-  - cmake>=3.19.7
+  - ca-certificates>=2023.11.17=hbcca054_0
+  - clang>=14.0.6=ha770c72_1
+  - clang-14>=14.0.6=default_h7634d5b_1
+  - clangxx>=14.0.6=default_h1e1816b_1
+  - cmake>=3.25.2=h077f3f9_0
   - cppcheck>=2.7.5=py310h94ea96f_1
   - curl>=7.87.0=h6312ad2_0
   - doxygen>=1.8.20=had0d8f1_0
   - expat>=2.5.0=h27087fc_0
+  - gcc>=10.4.0=hb92f740_13
   - gcc_impl_linux-64>=10.4.0=h5231bdf_19
   - gcc_linux-64>=10.4.0=h9215b83_11
   - gxx_impl_linux-64>=10.4.0=h5231bdf_19
@@ -28,6 +32,7 @@ dependencies:
   - ld_impl_linux-64>=2.39=hcc3a1bd_1
   - libblas>=3.9.0=16_linux64_openblas
   - libcblas>=3.9.0=16_linux64_openblas
+  - libclang-cpp14>=14.0.6=default_h7634d5b_1
   - libcurl>=7.87.0=h6312ad2_0
   - libedit>=3.1.20191231=he28a2e2_2
   - libev>=4.33=h516909a_1
@@ -39,6 +44,7 @@ dependencies:
   - libgomp>=12.2.0=h65d4601_19
   - libiconv>=1.17=h166bdaf_0
   - liblapack>=3.9.0=16_linux64_openblas
+  - libllvm14>=14.0.6=hcd5def8_4
   - libnghttp2>=1.51.0=hdcd2b5c_0
   - libnsl>=2.0.0=h7f98852_0
   - libopenblas>=0.3.21=pthreads_h78a6416_3
@@ -52,21 +58,21 @@ dependencies:
   - libzlib>=1.2.13=h166bdaf_4
   - ncurses>=6.3=h27087fc_1
   - numpy>=1.24.1=py310h08bbf29_0
-  - openssl>=1.1.1s=h0b41bf4_1
+  - openssl>=1.1.1w=hd590300_0
   - pcre>=8.45=h9c3ff4c_0
-  - pip>=22.3.1=pyhd8ed1ab_0
+  - pip>=23.3.1=pyhd8ed1ab_0
   - pygments>=2.11.2=pyhd8ed1ab_0
   - python>=3.10.8=h257c98d_0_cpython
   - python_abi>=3.10=3_cp310
   - rapidjson>=1.1.0=he1b5a44_1002
   - readline>=8.1.2=h0f457ee_0
   - rhash>=1.4.3=h166bdaf_0
-  - setuptools>=65.6.3=pyhd8ed1ab_0
+  - setuptools>=68.2.2=pyhd8ed1ab_0
   - sqlite>=3.36.0=h9cd32fc_2
   - sysroot_linux-64>=2.12=he073ed8_15
   - tk>=8.6.12=h27826a3_0
   - tzdata>=2022g=h191b570_0
-  - wheel>=0.38.4=pyhd8ed1ab_0
+  - wheel>=0.42.0=pyhd8ed1ab_0
   - xz>=5.2.6=h166bdaf_0
   - yaml-cpp>=0.7.0=h27087fc_2
   - zlib>=1.2.13=h166bdaf_4
