--- a/.github/workflows/ubuntu-build.yml
+++ b/.github/workflows/ubuntu-build.yml
@@ -76,7 +76,7 @@ jobs:
       # Save error logs, etc
       - name: Save artifacts
         if: failure()
-        uses: actions/upload-artifacts@master
+        uses: actions/upload-artifacts@main
         with:
           name: ErrorLogs
           path: ${{env.BUILD_TYPE}}/test/Testing/Temporary
